# dddm

./: .gitignore  README.md  assignment2_pipeline.py  pyproject.toml  scraper.py  vacancies.csv  vacancies.json
assignment2/: __init__.py  config.py  helpers.py  pipeline.py  processing.py  reporting.py  sources.py
assignment3/: config.py  sentiment.py  trends.py
assignment4/: REPORT.md  analyze_data.py  clean_data.py  fetch_data.py  main.tex
assignment4/data/processed/: openalex_cleaned.csv
assignment4/data/raw/: openalex_processed_raw.csv
google-trends/: multiTimeline.csv
output/doc/: assignment2_report.tex
reviews/: all_reviews.json  dvjob_google_search_threads.json  enbek_insta_threas.json  hh_insta_threads.json  join.py
