[project]
name = "dddm"
version = "0.1.0"
description = "Assignment 2 pipeline for Staj.kz market intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "matplotlib",
    "pandas",
    "python-docx",
    "requests",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
