[project]
name = "dddm"
version = "0.1.0"
description = "Assignment 2 & 3 pipeline for Staj.kz market intelligence"
authors = [{name = "Azamat Yerzhanuly"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "matplotlib",
    "pandas",
    "python-docx",
    "requests",
    "seaborn",
    "transformers",
    "torch",
    "scikit-learn",
    "prophet",
    "statsmodels",
]

[tool.hatch.build.targets.wheel]
packages = ["assignment2", "assignment3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
